Fixed navbar on mobile view

--- a/src/components/GlobalElements/Navigation/style.sass
+++ b/src/components/GlobalElements/Navigation/style.sass
@@ -26,8 +26,6 @@
 		padding: 0
 		flex-direction: column !important
 
-	.desktop__icons
-
 	.bar__icon
 		display: none !important
 
@@ -101,7 +99,7 @@
 	width: 100%
 	height: 7em
 	right: 0
-	z-index: 1000
+	z-index: 20000
 	display: flex
 	background: transparent
 	justify-content: center
@@ -150,7 +148,8 @@
 .mobile-visible
 	width: 100% !important
 	left: 0 !important
-	//height: 100vh !important
+	height: 100vh !important
+	background: white
 
 	.logo
 		top: 4% !important
@@ -169,14 +168,15 @@
 		position: absolute
 		height: 25px
 		display: flex
-		left: 90%
-		z-index: 501
+		left: 85%
+		z-index: 20001
 
 		i
 			position: relative
 			top: 90%
 			font-size: 2.5rem
 			cursor: pointer
+			color: black
 
 		.fa-times
 			display: none
